--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!--
+  Projeto: Volta às Aulas (Colégio Presbiteriano)
+  Autor/Desenvolvedor: Diego Lima de Oliveira
+  Contato: diegolima.dev@outlook.com | https://github.com/diegodromer
+  Copyright © 2025 Diego Lima de Oliveira. Todos os direitos reservados.
+  Licença: LicenseRef-Proprietary (uso autorizado pelo Colégio).
+  SPDX-License-Identifier: LicenseRef-Proprietary
+-->
 <html lang="pt-br">
 
 <head>
@@ -758,5 +766,6 @@
 
   </div>
 </body>
+
 
 </html>
